--- a/configserver/src/main/resources/config/ai-service.properties
+++ b/configserver/src/main/resources/config/ai-service.properties
@@ -23,4 +23,4 @@ kafka.topic=activity-events
 
 # Gemini API config
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
-gemini.api.key=AIzaSyAt4CC73vr_RbVz7TL0eJ0bZC7u171rA00
+gemini.api.key=${GEMINI_API_KEY}
