--- a/configserver/src/main/resources/config/nutrition-service.properties
+++ b/configserver/src/main/resources/config/nutrition-service.properties
@@ -8,8 +8,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/fitnessnutrition
 spring.data.mongodb.database=fitnessnutrition
 
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
-gemini.api.key=AIzaSyAt4CC73vr_RbVz7TL0eJ0bZC7u171rA00
-
+gemini.api.key=${GEMINI_API_KEY}
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
